[project]
name = "pydata-statsforecast-demo"
version = "0.1.0"
description = "StatsForecast + TimeGPT demo notebook for PyData conference"
requires-python = ">=3.10"

dependencies = [
    "nixtla",
    "statsforecast",
    "utilsforecast",
    "mlforecast",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "python-dotenv",
    "jupyterlab",
]